<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_modified"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/btn_doSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_timSort"
            tools:layout_editor_absoluteX="119dp"
            tools:layout_editor_absoluteY="73dp" />

        <Button
            android:id="@+id/btn_dualPivotQuickSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_dualPivotQuickSort"
            tools:layout_editor_absoluteX="116dp"
            tools:layout_editor_absoluteY="130dp" />

        <Button
            android:id="@+id/btn_radixSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_radixSort"
            tools:layout_editor_absoluteX="116dp"
            tools:layout_editor_absoluteY="188dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tv_basic"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/btn_insertionSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_insertionSort"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="277dp" />

        <Button
            android:id="@+id/btn_mergeSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_mergeSort"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="339dp" />

        <Button
            android:id="@+id/btn_quickSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_quickSort"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="409dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>